--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+  <section class="conteiner">
+    <ul class="slide">
+      <li><img src="img/foto1.jpg" alt=""></li>
+      <li><img src="img/foto2.jpg" alt=""></li>
+      <li><img src="img/foto3.jpg" alt=""></li>
+      <li><img src="img/foto4.jpg" alt=""></li>
+      <li><img src="img/foto5.jpg" alt=""></li>
+      <li><img src="img/foto6.jpg" alt=""></li>
+    </ul>
+  </section>
   <script type="module" src="./js/index.js"></script>
 </body>
 </html>
