navegacao por botoes finalizada

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <li><img src="img/foto6.jpg" alt=""></li>
     </ul>
   </section>
+  <div class="arrow-nav">
+    <button class="anterior">Prev</button>
+    <button class="proximo">Next</button>
+  </div>
   <script type="module" src="./js/index.js"></script>
 </body>
 </html>
